# FaroEngine

./: .gitignore  .gitmodules  Application_8cpp.html  Application_8h.html  Application_8h_source.html  Application_8hpp.html  Application_8hpp_source.html  Array_8h.html  Array_8h_source.html  Array_8hpp.html  Array_8hpp_source.html  Assert_8cpp.html  Assert_8hpp.html  Assert_8hpp_source.html  Broadcast_8h.html  Broadcast_8h_source.html  Broadcast_8hpp.html  Broadcast_8hpp_source.html  Building_8md.html  ClassRegistry_8h.html  ClassRegistry_8h_source.html  ClassRegistry_8hpp.html  ClassRegistry_8hpp_source.html  Color_8cpp.html  Color_8h.html  Color_8h_source.html  Color_8hpp.html  Color_8hpp_source.html  Containers_2Version_8hpp.html  Containers_2Version_8hpp_source.html  ConversionD3D12_8cpp.html  ConversionD3D12_8hpp.html  ConversionD3D12_8hpp_source.html  ConversionVK_8cpp.html  ConversionVK_8hpp.html  ConversionVK_8hpp_source.html  Core_8h.html  Core_8h_source.html  Core_8hpp.html  Core_8hpp_source.html  (+599 more)
Tools/: CMakeLists.txt  CoverageConfig.txt
Tools/Applications/FaroCLI/: CMakeLists.txt
Tools/Applications/FaroCLI/Source/: Commandline.cpp  Commandline.hpp  FileChanges.hpp  Main.cpp
Tools/Applications/FaroCLI/TestProject/: TestProject.faroproject.json
Tools/Applications/FaroGUI/: CMakeLists.txt
Tools/Applications/FaroGUI/Resources/: index.js
Tools/Applications/FaroGUI/Source/: Console.hpp
Tools/Applications/Tests/: CMakeLists.txt
Tools/Applications/Tests/Source/: Main.cpp
Tools/BuildTool/: CMakeLists.txt
Tools/BuildTool/Source/: Commandline.cpp  FileChanges.cpp  FileChanges.hpp  FileTree.cpp  FileTree.hpp  Main.cpp  Main.cs  ModuleManifest.cs  ModuleManifest.hpp  Parameters.cs  Parameters.hpp  ProjectManifest.cs  ProjectManifest.hpp  Utility.cs  Utility.hpp  Version.cs  Version.cs.in  Version.hpp.in
Tools/BuildTool/Source/Manifests/: ManifestInterface.hpp  ModuleManifest.cpp  ModuleManifest.hpp  ProjectManifest.cpp  ProjectManifest.hpp
Tools/BuildTool/Source/Tasks/: ITask.cs  ITask.hpp  TaskBuild.cpp  TaskBuild.cs  TaskBuild.hpp  TaskGenerate.cpp  TaskGenerate.cs  TaskGenerate.hpp
Tools/BuildTool/Source/Tests/: TestCommandline.cpp  TestFileTree.cpp  TestModuleManifest.cpp  TestPaths.hpp  TestProjectManifest.cpp
Tools/BuildTool/Source/ToolchainInfo/: ToolchainInfo.cpp  ToolchainInfo.hpp
Tools/BuildTool/Source/Toolchains/: IToolchain.cpp  IToolchain.cs  IToolchain.hpp  ToolchainAndroid.cpp  ToolchainAndroid.hpp  ToolchainEmscripten.cpp  ToolchainEmscripten.hpp  ToolchainMSVC.cpp  ToolchainMSVC.cs  ToolchainMSVC.hpp
Tools/BuildToolGUI/: CMakeLists.txt
Tools/BuildToolGUI/Dependencies/: CMakeLists.txt
Tools/BuildToolGUI/Resources/: index.html  index.js  style.css
Tools/BuildToolGUI/Resources/img/: .gitignore
Tools/BuildToolGUI/Source/: ApplicationResources.h  ApplicationResources.rc  Console.cpp  Console.hpp  Main.cpp  Window.cpp  Window.hpp
Tools/Builder/: CMakeLists.txt
Tools/Builder/Source/: BuildConfig.cpp  BuildConfig.hpp  BuilderDll.h  FileTree.cpp  FileTree.hpp  Main.cpp
Tools/Builder/Source/Manifests/: ManifestInterface.cpp
Tools/Builder/Source/Tasks/: ITask.hpp  TaskBuild.cpp  TaskBuild.hpp  TaskGenerate.cpp
Tools/Builder/Source/Toolchains/: IToolchain.cpp  IToolchain.hpp
Tools/FaroCLI/: CMakeLists.txt
Tools/FaroCLI/Source/: Commandline.cpp  Commandline.hpp  FileChanges.cpp  Main.cpp  Version.hpp.in
Tools/FaroCLI/Source/Tasks/: TaskBuild.cpp
Tools/FaroCLI/Source/Toolchains/: ToolchainMSVC.hpp
Tools/FaroGUI/: CMakeLists.txt
Tools/FaroGUI/Source/: ApplicationResources.rc.in  Window.hpp
Tools/Modules/Building/: CMakeLists.txt
Tools/Modules/Building/Source/: Builder.cpp  Builder.hpp  BuilderTasks.cpp  BuilderTasks.hpp  ChangeDatabase.cpp  ChangeDatabase.hpp  FileTree.cpp  FileTree.hpp  Worker.cpp  Worker.hpp
Tools/Modules/Generation/: CMakeLists.txt
Tools/Modules/Generation/Source/: Generator.cpp  Generator.hpp  GeneratorInterface.hpp
Tools/Modules/Project/: CMakeLists.txt
Tools/Modules/Project/Source/: Configuration.hpp  ManifestInterface.cpp  ManifestInterface.hpp  ModuleInfo.cpp  ModuleInfo.hpp  ProjectInfo.cpp  ProjectInfo.hpp  ScriptEnvironment.cpp  ScriptEnvironment.hpp  ScriptVM.cpp  ScriptVM.hpp
Tools/Modules/Reflection/: CMakeLists.txt
Tools/Modules/Reflection/Source/: Reflector.cpp  Reflector.hpp
Tools/Modules/Shaders/: CMakeLists.txt
Tools/Modules/Shaders/Source/: Main.cpp  ShaderCompiler.hpp  ShaderPacker.cpp  ShaderPacker.hpp
Tools/Modules/Shaders/TestResources/: Includes.hlsli  Shader.hlsl
Tools/Modules/Toolchain/: CMakeLists.txt
Tools/Modules/Toolchain/Source/: BuildSetup.cpp  BuildSetup.hpp  Configuration.hpp  Toolchain.cpp  Toolchain.hpp  ToolchainMSVC.cpp  ToolchainMSVC.hpp
Tools/Modules/Tools/: CMakeLists.txt
Tools/Modules/Tools/Source/: Command.cpp  Command.hpp  FaroLocation.cpp  FaroLocation.hpp  Utility.cpp  Utility.hpp
Tools/ShaderTranspiler/: CMakeLists.txt
Tools/ShaderTranspiler/Source/: Main.cpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderPacker.hpp  ShaderTranspilerDll.h
Tools/Shared/: Parameters.hpp
Tools/Shared/Command/: Command.cpp  Command.hpp
Tools/Shared/EmscriptenInfo/: EmscriptenInfo.cpp  EmscriptenInfo.hpp
Tools/Shared/MSVCInfo/: MSVCInfo.cpp  MSVCInfo.hpp
Tools/Shared/ToolchainInfo/: ToolchainInfo.cpp  ToolchainInfo.hpp
Tools/Shared/Utils/: Parameters.hpp  Utility.cpp  Utility.hpp
Tools/Shared/VulkanSDKInfo/: VulkanSDKInfo.cpp  VulkanSDKInfo.hpp
Tools/Shared/WindowsKitInfo/: WindowsKitInfo.cpp  WindowsKitInfo.hpp
Tools/Shared/duktape/: CMakeLists.txt
Tools/Shared/duktape/src/: duktape.c
Tools/Test/: CMakeLists.txt
Tools/Test/Source/: FileTree.hpp  Main.cpp
Tools/Test/Source/Manifests/: ProjectManifest.hpp
Tools/Test/Source/Tests/: TestPaths.cpp  (+6 more)
Tools/ToolGUI/: index.js  main.js  package-lock.json  package.json
Tools/ToolGUI/main/: main.js  preload.js
Tools/ToolGUI/renderer/: index.html  index.js  style.css
Tools/ToolchainInfo/: CMakeLists.txt
Tools/ToolchainInfo/Source/: Toolchain.cpp  Toolchain.h
(+442 files in other folders)
